--- a/app/components/privacy/content.hbs
+++ b/app/components/privacy/content.hbs
@@ -29,7 +29,8 @@
 			</ul>
 
 				{{!-- <p>▶ Information collected at the time of need</p> --}}
-				<table class="privacy_table">
+				<div class="table-width">
+					<table class="privacy_table">
 					<tbody>
 					<tr style="text-align: center;">
 						<th colspan="2">Purpose</th>
@@ -139,6 +140,7 @@
 						<td>ID, name, mobile phone number, e-mail, whether to receive advertisements</td>
 					</tr>
 				</tbody></table>
+				</div>
 				<p>▶ Information generated in the process of using the service:</p>
 				<br>
 				<table class="privacy_table">
