--- a/app/components/toolbar/footer-mm.hbs
+++ b/app/components/toolbar/footer-mm.hbs
@@ -1,82 +1,40 @@
-<div class="footer">
-	{{!-- <div class="foot_top">
-		<div class="inner clearfix">
-			<div class="ft_logo">
-				<img src="mageone.png" alt="" style="filter:grayscale(1)">
+<div class="footer container-fluid">
+	<div class="foot_top row">
+		<div class="inner clearfix col-md-4">
+			<div class="ft_logo w-100 text-center">
+				<img src="imageone.png" alt="" class="toolbar-img">
 			</div>
-			<ul class="ft_ul long">
-				<li class="ft_ul_title">English</li>
-				<li><a href="https://global.visang.com/sub/elif.php">G1~G9 Interactive Learning</a></li>
-				<li><a href="https://global.visang.com/sub/englisheye.php">G1~G9 Self-paced Learning</a></li>
-				<li><a href="https://global.visang.com/sub/wings.php">Kinder Interactive Learning</a></li>
-				<li><a href="https://global.visang.com/sub/challenge.php">Kinder AR/MR Tech Learning</a></li>
-				<li><a href="https://global.visang.com/sub/action.php">Kinder MR Tech Learning</a></li>
-			</ul>
-			<ul class="ft_ul long">
-				<li class="ft_ul_title">Mathematics</li>
-				<li><a href="https://global.visang.com/sub/math_alive.php">K~G5 Interactive Learning with AI</a></li>
-			</ul>
-			<ul class="ft_ul">
-				<li class="ft_ul_title">Language</li>
-				<li><a href="https://global.visang.com/sub/klass.php">Korean Language Learning</a></li>
-			</ul>
-			<ul class="ft_ul long">
-				<li class="ft_ul_title">Platform</li>
-				<li><a href="https://global.visang.com/sub/allvia.php">Digital Learning Platform</a></li>
-				<li><a href="https://global.visang.com/sub/quizmonster.php">Educational Game</a></li>
-				<li class="ft_ul_desc">Request Collaboration</li>
-			</ul>
-			<ul class="ft_ul">
-				<li class="ft_ul_title">Company</li>
-				<li><a href="https://www.visang.com/pageLoad?page_id=/en/main" target="_blank">Who We Are</a></li>
-				<li><a href="https://global.visang.com/sub/business.php">Business Proposal</a></li>
-				<li><a href="https://global.visang.com/sub/global_news.php">Global News</a></li>
-				<li><a href="https://global.visang.com/sub/contact.php">Contact</a></li>
-				<li><a href="https://global.visang.com/bbs/board.php?bo_table=faq">FAQ</a></li>
+		</div>
+		<div class="inner clearfix col-md-4 tcs bl-2o">
+			<h4 class="tco fs-1 mb-3">Yangon Branch</h4>
+			<ul class="ft_info">
+			<li><strong>Address: </strong>No.877, 3rd floor(B), 4th Ward, Byamaso Road, South Okkalapa, Yangon, Myanmar.</li>
+			{{!-- <li class="clear"> (Postal Code – 11091)</li> --}}
+			<li class="rp_clear"><strong>Phone No: </strong> +95 9 898 900 858</li>
+			<li class="clear"><strong>Email: </strong> info@imageonemm.com</li>
 			</ul>
 		</div>
-	</div> --}}
-	<div class="foot_btm">
-		<div class="inner clearfix">
-			<ul class="ft_info">
-			<li>Address: No.877, 3rd floor(B), 4th Ward, Byamaso Road, South Okkalapa, Yangon, Myanmar.</li>
-			<li class="clear"> (Postal Code – 11091)<span class="bar">&nbsp;|&nbsp;</span></li>
-			<li class="rp_clear">TEL: (+95) 9 898 900 858&nbsp;|&nbsp;</li>
-			<li class="clear">Email: info@imageonemm.com<span class="bar">&nbsp;|&nbsp;</span></li>
+		<div class="inner clearfix col-md-4 tcs bl-2o">
+			<h4 class="tco fs-1 mb-3">Mandalay Branch</h4>
+			<ul class="ft_info tcs">
+			<li><strong>Address: </strong>59/22B, 27th (B) Street, Bet: 58*59th Street, Ye Mon Taung Qtr, Mahar Aung Myae Township, Mandalay, Myanmar.</li>
+			{{!-- <li class="clear"> (Postal Code – 11091)</li> --}}
+			<li class="rp_clear"><strong>Phone No: </strong> +95 9 521 0294</li>
+			<li class="clear"><strong>Email: </strong> wingsmandalay@gmail.com</li>
 			</ul>
-			<ul class="ft_privacy_copy">
-				<li class="ft_privacy">
-					<LinkTo @route="privacy">Myanmar-Privacy Policy</LinkTo>
-				</li>
-				<li class="ft_copy">Copyright © IMAGEONE Co., Ltd. All Rights Reserved</li>
-			</ul>
+		</div>
+		<div class="col-md-12 text-right">
+			<p><LinkTo @route="privacy" class="tcs o-hover">Privacy Policy</LinkTo></p>
 		</div>
 	</div>
 
-	{{!-- <div class="foot_btm">
+	<div class="foot_btm">
 		<div class="row inner clearfix">
-			<div class="col-md-2 m-auto">
-				<div class="ft_logo">
-					<img src="mageone.png" alt="" class="toolbar-img">
-				</div>
-			</div>
-			<div class="col-md-7 m-auto">
-				<ul class="ft_info">
-					<li>Address: No.877, 3rd floor(B), 4th Ward, Byamaso Road, South Okkalapa, Yangon, Myanmar. (Postal Code – 11091)<span class="bar">&nbsp;|&nbsp;</span></li>
-					<li class="rp_clear">TEL: (+95) 9 898 900 858&nbsp;|&nbsp;</li>
-					<li>FAX: +82-2-6970-6148</li>
-					<li class="clear">Email: info@imageonemm.com<span class="bar">&nbsp;|&nbsp;</span></li>
-					
-				</ul>
-			</div>
-			<div class="col-md-3 m-auto">
-				<ul class="ft_privacy_copy">
-					<li class="ft_privacy">
-						<LinkTo @route="privacy">Privacy Policy</LinkTo>
-					</li>
-					<li class="ft_copy">Copyright © IMAGEONE Co., Ltd. All Rights Reserved</li>
+			<div class="col-md-12 m-auto">
+				<ul class="text-center">
+					<li class="tcs">Copyright © IMAGEONE Co., Ltd. All Rights Reserved</li>
 				</ul>
 			</div>	
 		</div>
-	</div> --}}
+	</div>
 </div>
