--- a/app/components/index/content.hbs
+++ b/app/components/index/content.hbs
@@ -2,7 +2,7 @@
 	<div class="subpage_titlebox english" style=" ">
 		<div class="subpage_textbox inner">
 			<p class="subpage_title">ENGLISH FOR KIDS</p>
-			<p class="subpage_article">With the independent spirit to see the ordinary from a different perspective,<br>VISANG is creating a new global educational culture</p>
+			<p class="subpage_article">With the independent spirit to see the ordinary from a different perspective,<br>VISANG is creating a new global educational culture.</p>
 			<br>
 			<p class="subpage_article">We, IMAGEONE is a franchiser in Myanmar who owns the exclusive right to produce WINGs’ digital contents and physical contents in Myanmar.</p>
 			{{!-- <p class="subpage_path">
