--- a/app/components/toolbar/nav-mm.hbs
+++ b/app/components/toolbar/nav-mm.hbs
@@ -83,7 +83,7 @@
 	<div class="header_inside">
 		<div class="head_logo">
 			<a href="https://global.visang.com"></a>
-			<LinkTo @route="index"><img src="imageone.png" alt="" class="toolbar-img"></LinkTo>
+			<LinkTo @route="mm"><img src="imageone.png" alt="" class="toolbar-img"></LinkTo>
 		</div>
 		<div class="y-head_lnb">
 			<ul class="y-clearfix">
