--- a/app/components/toolbar/navbar.hbs
+++ b/app/components/toolbar/navbar.hbs
@@ -28,7 +28,7 @@
 					<span class="caret"></span>
 					</dd.toggle>
 					<dd.menu as |menu|>
-					<menu.item class="padding-0">
+					<menu.item class="ddMenu">
 						<menu.link-to @route="mm" class="lang m-0">MM</menu.link-to>
 					</menu.item>
 					</dd.menu>
