--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,3 +3,8 @@
 <Index::Content/>
 
 <Toolbar::Footer/>
+<p class="floating">
+    <LinkTo @route="proposal">
+    <img src="floating_banner_souce_1.png" class="floating_img_1" style="opacity: 0.8;">
+    </LinkTo>
+</p>
