--- a/app/templates/mm.hbs
+++ b/app/templates/mm.hbs
@@ -1,3 +1,11 @@
 <Toolbar::NavMm/>
+
 <Index::ContentMm/>
+
 <Toolbar::FooterMm/>
+
+<p class="floating">
+    <LinkTo @route="proposal">
+    <img src="floating_banner_souce_1.png" class="floating_img_1" style="opacity: 0.8;">
+    </LinkTo>
+</p>
