--- a/app/components/proposal/content.hbs
+++ b/app/components/proposal/content.hbs
@@ -7,7 +7,7 @@
 			<p class="subpage_article">We, IMAGEONE is a franchiser in Myanmar who owns the exclusive right to produce WINGs’ digital contents and physical contents in Myanmar.</p>
 		</div>
 	</div>
-	<div class="inner inner_x ">
+	<div class="inner inner_x">
         <div id="business_proposal">
         <div class="inner">
         <p class="business_bigtext">
@@ -38,18 +38,30 @@
         </ul>
         </div>
         <div class="business_contact">
-        <a onclick="popOn();" class="a_cover"></a><!-- popup -->
-        <div class="contact_btn">
-            <div class="contact_btn_left">
-                <img src="https://global.visang.com/theme/basic/img/icon_sub11_paper plane.png" alt="">
+            <div class="contact_btn">
+                <div class="contact_btn_left">
+                    <img src="icon_sub11_paper plane.png" alt="">
+                </div>
+                <div class="contact_btn_right">
+                    <p class="cb_title">Contact Us</p>
+                    <p class="cb_article">Click the icon to the left to<br>make a proposal to IMAGEONE.</p>
+                </div>
             </div>
-            <div class="contact_btn_right">
-                <p class="cb_title">Contact Us</p>
-                <p class="cb_article">Click the icon to the left to<br>make a proposal to IMAGEONE.</p>
-            </div>
-        </div>
         </div>
         <div class="business_contact_2">
+            <div class="contact_btn">
+                <div class="contact_btn_left call-icon icon-wrapper">
+                    <a href="tel:+959898900858">
+                        <img src="phone-call.png" alt="">
+                    </a>
+                </div>
+                <div class="contact_btn_right">
+                    <p class="cb_title fs-1">Contact Now!</p>
+                    {{!-- <p class="cb_article">Click the icon to the left to<br>make a proposal to IMAGEONE.</p> --}}
+                </div>
+            </div>
+        </div>
+        {{!-- <div class="business_contact_2">
         <div class="inner">
             <p class="bc_bigtext">Agent Recruitment</p>
             <p class="bc_smalltext">
@@ -57,7 +69,7 @@
                 We look forward to having you as a competent agent promoting Visang products.
             </p>
         </div>
-        </div>
+        </div> --}}
         </div>
 
         <div class="business_popup_wrapper">
