--- a/app/components/proposal/content.hbs
+++ b/app/components/proposal/content.hbs
@@ -56,7 +56,7 @@
                     </a>
                 </div>
                 <div class="contact_btn_right">
-                    <p class="cb_title fs-1">Contact Now!</p>
+                    <p class="cb_title fs-1">Call Now!</p>
                     {{!-- <p class="cb_article">Click the icon to the left to<br>make a proposal to IMAGEONE.</p> --}}
                 </div>
             </div>
