--- a/app/components/proposal/content.hbs
+++ b/app/components/proposal/content.hbs
@@ -37,12 +37,12 @@
             </li>
         </ul>
         </div>
-        <div class="business_contact">
-            <div class="contact_btn">
-                <div class="contact_btn_left">
-                    <img src="icon_sub11_paper plane.png" alt="">
+        <div class="row business_contact">
+            <div class="col-md-12">
+                <div class="d-inline-block">
+                    <img src="icon_sub11_paper plane.png" alt="" class="mr-4">
                 </div>
-                <div class="contact_btn_right">
+                <div class="d-inline-block text-left valign-middle">
                     <p class="cb_title">Contact Us</p>
                     <p class="cb_article">Click the icon to the left to<br>make a proposal to IMAGEONE.</p>
                 </div>
