--- a/app/templates/privacy.hbs
+++ b/app/templates/privacy.hbs
@@ -1,3 +1,11 @@
 <Toolbar::Navbar/>
+
 <Privacy::Content/>
+
 <Toolbar::Footer/>
+
+<p class="floating">
+    <LinkTo @route="proposal">
+    <img src="floating_banner_souce_1.png" class="floating_img_1" style="opacity: 0.8;">
+    </LinkTo>
+</p>
