--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,10 @@
 @import "ember-bootstrap/bootstrap";
 @import 'aos';
 @import 'response';
-
+@font-face {
+	font-family:'Pyidaungsu';
+	src:local('Pyidaungsu'), url('https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.woff') format('woff'), url('https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.ttf') format('ttf');
+	}
 $white: #ffffff;
 $smoke: #eeee;
 $black: #000000;
@@ -27,7 +30,8 @@ $indigo: #004a86;
 	vertical-align: middle;
 }
 body {
-    /*font-family: Helvetica,Tahoma;*/
+	/*font-family: Helvetica,Tahoma;*/
+	font-family:'Pyidaungsu'!important;
   }
   
   *,
@@ -333,8 +337,8 @@ body {
 box-shadow: inset 1px 1px 2px #222542;
 }
 
-.pg_page {font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';font-size:18px;line-height:20px;height:20px;width:auto;height:auto;padding:0;min-width:0;border:none;border-radius:0;margin-right:30px;background:none;color:#656565;}
-.pg_current {font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';font-size:18px;line-height:20px;height:20px;width:auto;height:auto;padding:0;min-width:0;border:none;border-radius:0;margin-right:30px;background:none;color:$orange;font-weight:600;border:none;box-shadow:none;}
+.pg_page {font-family:'pyidaungsu', 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';font-size:18px;line-height:20px;height:20px;width:auto;height:auto;padding:0;min-width:0;border:none;border-radius:0;margin-right:30px;background:none;color:#656565;}
+.pg_current {font-family:'pyidaungsu', 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';font-size:18px;line-height:20px;height:20px;width:auto;height:auto;padding:0;min-width:0;border:none;border-radius:0;margin-right:30px;background:none;color:$orange;font-weight:600;border:none;box-shadow:none;}
 .pg_page:last-child {margin-right:0;}
 .pg_start {width:57px;height:20px;background:url(../img/icon_preview.png) no-repeat center center;}
 .pg_prev {width:57px;height:20px;background:url(../img/icon_preview.png) no-repeat center center;}
@@ -369,7 +373,7 @@ box-shadow: inset 1px 1px 2px #222542;
 
 /* 초기화 */
 html {overflow-y:scroll}
-body {margin:0;padding:0;font-size:0.75em;font-family:'Noto Sans KR', 'Malgun Gothic', dotum, sans-serif;/*background:#e7e7e7*/}
+body {margin:0;padding:0;font-size:0.75em;font-family:'pyidaungsu','Noto Sans KR', 'Malgun Gothic', dotum, sans-serif;/*background:#e7e7e7*/}
 html, h1, h2, h3, h4, h5, h6, form, fieldset, img {margin:0;padding:0;border:0}
 h1, h2, h3, h4, h5, h6 {font-size:1em;}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display:block}
