--- a/app/components/toolbar/footer.hbs
+++ b/app/components/toolbar/footer.hbs
@@ -24,7 +24,7 @@
 			</ul>
 		</div>
 		<div class="col-md-12 text-right">
-			<p><LinkTo @route="privacy" class="tcs o-hover">Privacy-Policy</LinkTo></p>
+			<p><LinkTo @route="privacy-policy" class="tcs o-hover">Privacy Policy</LinkTo></p>
 		</div>
 	</div>
 
