--- a/app/components/index/content.hbs
+++ b/app/components/index/content.hbs
@@ -126,7 +126,8 @@
 					<p class="pip_smalltext aos-init" data-aos="fade-up">
 						2016, Signed supply agreements with the Chinese company, New Oriental Education<br>
 						2018, Signed supply agreements with the Vietnamese company, American Learning Lab<br>
-						2019, Signed supply agreements with the Chinese company, Angels Education.
+						2019, Signed supply agreements with the Chinese company, Angels Education <br>
+						2020, Signed supply agreements with the Myanmar company, IMAGEONE Co., Ltd.
 					</p>
 					<img src="img_sub01_12.png" alt="" class="pipc_img aos-init" data-aos="fade-up">
 				</div>
