--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,7 +5,7 @@
 	font-family:'Pyidaungsu';
 	src:local('Pyidaungsu'), 
 	url('https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.woff') format('woff'),
-	url('https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.ttf') format('ttf');
+	url('https://mwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.ttf') format('ttf');
 	}
 $white: #ffffff;
 $smoke: #eeee;
@@ -357,18 +357,18 @@ box-shadow: inset 1px 1px 2px #222542;
 @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 900;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');}
 
 /*나눔고딕*/
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 /*나눔바른고딕*/
 @import url(https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css); 
 /*NotoSnasKr : 사용법 font-family: 'Noto Sans KR', sans-serif; */
 /*@import url("https://fonts.googleapis.com/earlyaccess/notosanskr.css");*/
-@import url("http://fonts.googleapis.com/earlyaccess/nanumgothic.css");
-@import url("http://fonts.googleapis.com/earlyaccess/nanumbrushscript.css");
-@import url("http://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css");
-@import url("http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css");
-@import url("http://fonts.googleapis.com/earlyaccess/nanumpenscript.css");
+@import url("https://fonts.googleapis.com/earlyaccess/nanumgothic.css");
+@import url("https://fonts.googleapis.com/earlyaccess/nanumbrushscript.css");
+@import url("https://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css");
+@import url("https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css");
+@import url("https://fonts.googleapis.com/earlyaccess/nanumpenscript.css");
 /*나눔명조 Nanum Myeongjo*/
-@import url(http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
 
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css); 
 .font_spoqa {font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';}
